--- a/hrm-ui/src/components/style.css
+++ b/hrm-ui/src/components/style.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   background-color: #ffffff;
   padding: 1rem;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -66,8 +66,9 @@ body {
   width: 250px;
   background-color: #f7f7f7;
   padding: 1rem;
-  box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-  border-right: 1px solid #d1d1d1; /* Outline effect */
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  border-right: 1px solid #d1d1d1;
+  /* Outline effect */
   position: fixed;
   height: 100%;
   overflow-y: auto;
@@ -113,4 +114,15 @@ body {
 .custom-dropdown-item .nav-link:hover {
   color: #0056b3;
   text-decoration: underline;
+}
+
+.parent-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.child-link {
+  display: flex;
+  margin: 0px 0px 0px 20px;
 }
